# Streamlit-application

./: .gitignore  Dockerfile  README.md  map_viz.py  preprocess_data.py  pyproject.toml
Data/: Roma_ZU.dbf  Roma_ZU.shp  Roma_ZU.shx  rome_houses_5000_sample.xlsx
